# VBDecompiler

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile.test  README.md
.opencode/: AGENTS.md
crates/vbdecompiler-cli/: Cargo.toml
crates/vbdecompiler-cli/src/: main.rs
crates/vbdecompiler-core/: Cargo.toml  test-packer.toml
crates/vbdecompiler-core/examples/: detect_packer.rs
crates/vbdecompiler-core/src/: codegen.rs  decompiler.rs  error.rs  ir.rs  lib.rs  lifter.rs  packer.rs  pcode.rs  pe.rs  vb.rs  x86.rs
crates/vbdecompiler-ffi/: Cargo.toml
crates/vbdecompiler-ffi/src/: lib.rs
docs/: ARCHITECTURE.md  STATUS.md  UPX_HANDLING.md  VB_STRUCTURES.md
include/: vbdecompiler_ffi.h
resources/: vbdecompiler.qrc
src/: main.cpp  test_vb.cpp  test_x86.cpp
src/core/decompiler/: ControlFlowStructurer.cpp  ControlFlowStructurer.h  Decompiler.cpp  Decompiler.h  TypeRecovery.cpp  TypeRecovery.h  VBCodeGenerator.cpp  VBCodeGenerator.h
src/core/disasm/pcode/: PCodeDisassembler.cpp  PCodeDisassembler.h  PCodeInstruction.cpp  PCodeInstruction.h  PCodeOpcode.cpp  PCodeOpcode.h
src/core/disasm/x86/: X86DecoderArithmetic.cpp  X86DecoderControl.cpp  X86DecoderData.cpp  X86DecoderHelpers.cpp  X86DecoderHelpers2.cpp  X86DecoderLogical.cpp  X86Disassembler.cpp  X86Disassembler.h  X86Instruction.cpp  X86Instruction.h
src/core/ir/: IRExpression.cpp  IRExpression.h  IRFunction.cpp  IRFunction.h  IRStatement.cpp  IRStatement.h  IRType.cpp  IRType.h  PCodeLifter.cpp  PCodeLifter.h
src/core/pe/: PEFile.cpp  PEFile.h  PEHeader.h  PESection.h
src/core/vb/: VBFile.cpp  VBFile.h  VBStructures.h
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/utils/: ByteReader.h
tests/: test_decompiler.cpp  test_decompiler_simple.cpp  test_e2e.cpp  test_ir.cpp  test_lifter.cpp  test_pcode.cpp  test_pe.cpp  test_real_vb.cpp  test_vb.cpp  test_x86.cpp  test_x86_rust.cpp
