[workspace]
resolver = "2"
members = [
    "crates/vbdecompiler-core",
    "crates/vbdecompiler-cli",
    "crates/vbdecompiler-ffi",
]

[workspace.package]
version = "1.0.0"
authors = ["VBDecompiler Project"]
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
repository = "https://github.com/yourusername/VBDecompiler"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
rayon = "1.10"

# Binary parsing
goblin = "0.9"
scroll = "0.12"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "3.0"

# FFI dependencies
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
